Make sure body background covers full height

--- a/style.css
+++ b/style.css
@@ -11,7 +11,15 @@ body {
     hsl(0, 0%, 100%),
     hsl(0, 100%, 98%)
   );
-  height: 100vh;
+  min-height: 100vh;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto;
+}
+
+@media screen and (min-width: 875px) {
 }
 
 #logo {
